<resources>
    <string name="app_name">Alfa Food Service</string>
    <string name="title_activity_restaurant_registration">RestaurantRegistration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="myOrders">Order History</string>
    <string name="account">Account</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_cart">View Cart</string>
    <string name="rupeesymbol">₹ </string>
    <string name="bill_details">bill details</string>
    <string name="cart_total">cart total</string>
    <string name="delivery_charges">delivery charges</string>
    <string name="free">Free</string>
    <string name="placeorder">placeOrder</string>
    <string name="cash_on_delivery">cash on delivery</string>
    <string name="place_order">place order</string>
    <string name="select_payment_method">select payment method</string>
    <string name="credit_debit_and_atm_cards">credit, debit and atm cards</string>
    <string name="pay_via_upi">pay via upi</string>
    <string name="paytm">paytm</string>
    <string name="phonepay">phonepay</string>
    <string name="add_details">Add Details</string>
    <string name="enter_your_upi_id_or_phone_number">enter your upi id or phone number</string>
    <string name="name_on_card">name on card</string>
    <string name="card_number">card number</string>
    <string name="expiry_date_mm_yy">expiry date mm yy</string>
    <string name="add_menu">Add Menu</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="order_history">order history</string>
    <string name="delivered">Delivered</string>
    <string name="ordered_on">ordered on</string>
    <string name="approval_of_restaurant">Approval of Restaurant</string>
    <string name="view_restaurant_details">View Restaurant Details</string>
    <string name="view_customer_details">View Customer Details</string>
    <string name="view_customer_feedback">View Customer Feedback</string>
    <string name="name">name</string>
    <string name="your_order_has_been_placed">your order has been placed</string>
    <string name="go_to_dashboard">go to dashboard</string>
    <string name="rate_order">Rate Order</string>
    <string name="rate_your_order">Rate Your Order</string>
    <string name="comments">Comments :</string>
    <string name="submit">Submit</string>
    <string name="rated">Rated</string>
    <string name="your_restaurant_feedback">Your Restaurant Feedback</string>
    <string name="rating">Rating</string>
    <string name="restaurant_s_feedback">Restaurant\'s Feedback</string>
    <string name="Approved">approved</string>
    <string name="view_details">View Details</string>
    <string name="restaurant_name">\Restaurant Name   : \</string>
    <string name="restaurant_city">\Restaurant City   : \</string>
    <string name="phone_number">\Phone Number      : \</string>
    <string name="email_id">\Email Id          : \</string>
    <string name="avg_for_two">\Avg Cost for two  : \</string>
    <string name="avg_delivery_time">\Avg Delivery Time : \</string>
    <string name="rating1">\Rating            : \</string>
    <string name="restaurant__id">\Restaurant Id     : \</string>
    <string-array name="Languages">
        <item>Select Any</item>
        <item>Admin</item>
        <item>Customer</item>
        <item>Restaurant Owner</item>
    </string-array>
    <string name="selected_user">Selected User:</string>
    <string name="accept_or_reject_order">Accept Or Reject Order</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accept_reject">Accept/Reject</string>
    <string name="your_order_is_placed_waiting_for_restaurant_confirmation">Your order is placed Waiting for Restaurant Confirmation</string>
    <string name="admin_login">Admin Login</string>
    <string name="restaurants_waiting_for_approval">Restaurants Waiting For Approval</string>
    <string name="feedback">Feedback</string>
    <string name="customer_details">Customer Details</string>
    <string name="procced_to_payment">Procced to Payment</string>
    <string name="alfa">Alfa Food Service</string>
    <string name="items">Items</string>
    <string name="add_restaurant_menu">Add Restaurant Menu</string>
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="price_in_rs">Price in Rs</string>
    <string name="add">Add</string>
    <string name="upload_image">Upload Image</string>

    <string name="customer_login">Customer Login</string>

    <string name="alfa_food_service">Alfa Food Service</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="username">UserName</string>
    <string name="phone_number1">Phone Number</string>
    <string name="city_name">City Name</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="re_enter_the_password">Re-Enter the password</string>
    <string name="already_registered_login">Already Registered ? Login</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="restaurant_id">Restaurant Id</string>
    <string name="restaurant_name1">Restaurant Name</string>
    <string name="city">City</string>
    <string name="phone_no">Phone no</string>
    <string name="email_id1">Email Id</string>
    <string name="average_cost_for_2">Average Cost for 2</string>

    <string name="average_time_for_food_preparation">Average time for food preparation</string>
    <string name="approve">Approve</string>
    <string name="back">Back</string>
    <string name="delivering_to">DELIVERING TO</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="menu">Menu</string>
    <string name="my_account">My Account</string>
    <string name="name1">Name :</string>
    <string name="emial_id1">Emial Id :</string>
    <string name="mobile_no1">Mobile No :</string>
    <string name="address1">Address :</string>
    <string name="sign_out">Sign Out</string>
    <string name="restaurant_login">Restaurant Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="your_delivery_details">Your Delivery Details</string>
    <string name="restaurant_registration">Restaurant Registration</string>
    <string name="basic_info">Basic info</string>
    <string name="restaurant_name2">RESTAURANT NAME *</string>
    <string name="enter_the_restaurant_name">Enter the restaurant name</string>
    <string name="city_name1">CITY NAME *</string>
    <string name="enter_the_city_name">Enter the city name</string>
    <string name="phone_number2">PHONE NUMBER *</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="email_id2">Email id *</string>
    <string name="enter_the_email_id">Enter the email id</string>
    <string name="avg_cost">Avg cost *</string>
    <string name="cost_for_two">cost for two</string>
    <string name="avg_time">Avg time *</string>
    <string name="enter_avg_time">enter avg time</string>
    <string name="image">Image *</string>
</resources>