<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context=".RestaurantRegistration">

        <TextView
            android:id="@+id/addarest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:text="@string/restaurant_registration"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/basicinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addarest"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/basic_info"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/basicinfo"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/restaurant_name2"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lable1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_restaurant_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_restaurant_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lable2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/city_name1"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="NotSibling" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lable2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_city_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/lable3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number2"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="NotSibling" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lable3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phno"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_phone_number"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lable4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email_id2"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="NotSibling" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lable4"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_email_id"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/lable6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout4"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/avg_cost"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="NotSibling" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lable6"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/costfor2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost_for_two"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lable7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout6"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/avg_time"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="NotSibling" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lable7"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_access_time_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/avgtime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_avg_time"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lable8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout7"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/image"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/lable8"
            android:contentDescription="TODO"
            android:src="@drawable/ic_baseline_add_a_photo_24" />

        <Button
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#3449AE"
            android:text="@string/upload_image" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uploadImage"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#3449AE"
            android:hint="@string/register"
            android:textColorHint="@color/white">

        </Button>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/alfa_food_service"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>